# Heatsink_test

./: .gitignore  Dockerfile  README.md  alembic.ini  commands  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 1c49d65f748a_add_enum.py  2023_08_21_16:12-0e05eb7f751b_change_measured_part_literal.py  2023_08_22_16:40-9363a9456faa_change_measurement_data_to_array_float.py  2500b8deebfa_database_creation.py  380aacbdc81e_add_timezone_true.py  38fde7e02d52_initial.py  50cf7ad95fc8_add_run_table.py  8cbdbad91a70_add_enum2.py  909cf240e6db_change_register_datetime.py  99d16655bcd7_add_role_nullable_true.py  a0097e7050d0_add_run_table.py  ab948ce151b6_initial.py  c810fdcd5c32_database_creation.py  fdabe89c4254_database_creation.py
src/: config.py  database.py  keygen.py  main.py  meas_control.py  models.py
src/auth/: auth.py  auth_config.py  database.py  manager.py  models.py  schemas.py
src/measurements/: meas_control.py  models.py  plot_gen.py  router.py  schemas.py
src/pages/: router.py
src/templates/: arun.html  base.html  chart.html  control.html  runs.html  signin.html  signup.html
