[tool.poetry]
name = "heatsink-test"
version = "0.1.0"
description = ""
authors = ["Yaroslav Galkin <galkinyaroslav@gmail.com>"]
readme = "README.md"
packages = [{include = "heatsink_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pyvisa = "^1.13.0"
pyvisa-py = "^0.7.0"
gpib-ctypes = "^0.3.0"
pyusb = "^1.2.1"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
