[tool.poetry]
name = "heatsink-test"
version = "0.1.0"
description = ""
authors = ["Yaroslav Galkin <galkinyaroslav@gmail.com>"]
readme = "README.md"
packages = [{include = "heatsink_test"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.18"
fastapi = {extras = ["all"], version = "^0.99.1"}
alembic = "^1.11.1"
asyncpg = "^0.27.0"
prospector = "^1.10.2"
pytest = "^7.4.0"
httpx = "^0.24.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.0.0"}
uvicorn = {extras = ["all"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
