[tool.poetry]
name = "heatsink-test"
version = "0.1.0"
description = ""
authors = ["Yaroslav Galkin <galkinyaroslav@gmail.com>"]
readme = "README.md"
packages = [{include = "heatsink_test"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyvisa = "^1.13.0"
pyvisa-py = "^0.7.0"
gpib-ctypes = "^0.3.0"
pyusb = "^1.2.1"
pyserial = "^3.5"
sqlalchemy = "^2.0.18"
fastapi = {extras = ["all"], version = "^0.99.1"}
alembic = "^1.11.1"
asyncpg = "^0.27.0"
prospector = "^1.10.2"
pytest = "^7.4.0"
httpx = "^0.24.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.0.0"}
uvicorn = {extras = ["all"], version = "^0.22.0"}
matplotlib = "^3.7.2"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
